# GrapTest

./: .gitignore  README.md
Development/HypernetTest/: Branch.cpp  Branch.h  CMakeLists.txt  Globals.h  Hypernet.cpp  Hypernet.h  Main.cpp  PairConnectivity.cpp  Stdafx.h
Graph/GraphTest/: Cclass.cpp  ChainReduction1.cpp  Globals.h  Main.cpp  PairConnection.cpp
GraphTest/: CMakeLists.txt  Cclass.h
Hypernet/HypernetTest/: Branch.cpp  CMakeLists.txt  Main.cpp  PairConnectivity.cpp
HypernetTest/: Branch.cpp  Branch.h  CMakeLists.txt  Cclass.cpp  Cclass.h  GenCombinations.cpp  Hypernet.cpp  Hypernet.h  PairConnectivity.cpp  funcs.h  globals.h  main.cpp  pairconnection.cpp  stdafx.h
MPIGraphTest/: Cclass.cpp  ChainReduction2.cpp  Funcs.h  Globals.h  Main.cpp  Stdafx.h
MPI_pc/: MPI_pc.VC.VC.opendb  MPI_pc.sln
MPI_pc/Debug/: Новый текстовый документ.txt
MPI_pt/: MPI_pt.sln
MPI_pt_time/: MPI_pt_time.sln
Polinomtest/: Polinomtest.sln
polinomtest/: CMakeLists.txt  Cclass.cpp  Cclass.h  chainreduction1.cpp  chainreduction2.cpp  funcs.h  globals.h  main.cpp  pairconnection.cpp
src/GraphTest/: ApplicationSettings.h  CMakeLists.txt  Cclass.cpp  Cclass.h  ChainReduction2.cpp  Globals.h  Main.cpp  PairConnection.cpp
src/GraphTest/inputs/: G6(8,9).txt  ex5.txt
src/GraphTest/inputs/tests/: TestGraph(30,45).txt
src/MPIGraphTest/: ApplicationSettings.h  CMakeLists.txt  Cclass.h  ChainReduction1.cpp  Globals.h  MPI_pack.cpp  Main.cpp  PairConnection.cpp
testAtapi/: CMakeLists.txt  Cclass.cpp  Cclass.h  main.cpp  products.cpp  products.h  stdafx.h
(+77 files in other folders)
